cmake_minimum_required(VERSION 4.3.2)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp
        zlab03.cpp
        zlab03.h
        organizm.cpp
        organizm.h
        ustawienia.h
        GeneratorLosowy.cpp
        GeneratorLosowy.h
        Sasiedztwo.cpp
        Sasiedztwo.h
        ZLab06.cpp
        ZLab06.h
        Mieszkaniec.cpp
        Mieszkaniec.h
        Sasiedztwo2.cpp
        Sasiedztwo2.h
        ZLab10.cpp
        ZLab10.h)
